src/test/deca/context/valid/created/decl_var/decl_float_eq_int.deca
// Description :
//    test affectation float = int
//
// Resultats :
//		Ok

{
float a = 1; 
}