src/test/deca/context/invalid/created/double_declaration_float.deca
{
float a;
float a; // a est déclaré deux fois
}